--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Asociados
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-button expand="full" href="siapa"><img src="../../assets/IMG/Siapa.png"></ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button expand="full" href="ayuntamiento"><img src="../../assets/IMG/Ayuntamiento.png"></ion-button>
+      </ion-col>
+      
+    </ion-row>
+    <ion-row>
+    <ion-col>
+      <ion-button expand="full">Full Button</ion-button>
+    </ion-col>
+    <ion-col>
+      <ion-button expand="full">Full Button</ion-button>
+    </ion-col>
+  </ion-row>
+  </ion-grid>
 </ion-content>
