--- a/src/app/siapa/siapa.page.html
+++ b/src/app/siapa/siapa.page.html
@@ -18,4 +18,7 @@
   <ion-button color="primary" (click)="subir()" >Enviar</ion-button>
       
       
+  <ion-button> mostrar mapa</ion-button>
+    <div #map id="map"> </div>
+
 </ion-content>
