--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,11 +9,25 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col>
-        <img src="../../assets/IMG/Siapa.png" height="500" width="500" routerLink="/siapa">
+      <ion-col size="12" size-md>
+
+        <ion-card> 
+          <ion-card-content class="text-center">
+            <img src="../../assets/IMG/Siapa.png" routerLink="/siapa">
+          </ion-card-content>
+        </ion-card>
+        
+        
       </ion-col>
-      <ion-col>
-       <img src="../../assets/IMG/Ayuntamiento.png" height="500" width="500" routerLink="/ayuntamiento">
+      <ion-col size="12" size-md>
+        <ion-card> 
+          <ion-card-content class="text-center">
+            
+            <img src="../../assets/IMG/Ayuntamiento.png" routerLink="/ayuntamiento">
+          </ion-card-content>
+        </ion-card>
+        
+       
       </ion-col>
       
     </ion-row>
