Se agrego un login con google

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,5 +34,8 @@
     
   </ion-grid>
 
+  <ion-button routerLink="/login">
+    Click me
+  </ion-button>
   <div #map id="map"> </div>
 </ion-content>
